introduced es entity count

--- a/src/main/java/frontend/StatisticPage.html
+++ b/src/main/java/frontend/StatisticPage.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:wicket="http://www.w3.org/1999/xhtml">
 <body>
 <p> Hello World!</p>
-
+<div wicket:id="count"></div>
 </body>
 </html>
